<resources>
    <string name="app_name">FinalCashProject</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mybankText">My Bank</string>
    <string name="loginText">Login</string>
    <string name="aboutText">About</string>
    <string name="aboutbankText">My Bank helps you to save income and expenses.
And helps to calculate your income effectively </string>
    <string name="openbankText">Open Bank</string>
    <string name="saveincomeText">Save Income</string>
    <string name="incomeText">Income</string>
    <string name="nameObjectText">Name Text</string>
    <string name="moneyObjextText">Money</string>
    <string name="outcomeText">Outcome</string>
    <string name="saveoutcomeText">Save Outcome</string>
    <string name="navigation">navigations</string>
    <string name="foodText">food</string>
    <string name="editincomeText">Edit Income</string>
    <string name="editoutcomeText">Edit Outcome</string>
    <string name="singinText">Sing in</string>
    <string name="money_sumary">Money Sumary</string>
    <string name="sum_income">Sum Income</string>
    <string name="_0">0</string>
</resources>
