<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SaveIncomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/mybankLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mybankText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/incomeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incomeText"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/nameIncomeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameObjectText"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nameIncomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/moneyIncomeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/moneyObjextText"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/moneyIncomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textAlignment="center" />

        <Button
            android:id="@+id/saveIncomeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveincomeText"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</layout>