<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginBankFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/myloginBankLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mybankText"
            android:textAlignment="center"
            android:textSize="60sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginBankLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginText"
            android:textAlignment="center"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/inputIdText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/inputPassText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/singinButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singinText"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>
</layout>