<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditIncomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">


        <TextView
            android:id="@+id/mybankLabe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mybankText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editIncomeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editincomeText"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="58dp">

                <TextView
                    android:id="@+id/editIncomelabelText"
                    android:layout_width="133dp"
                    android:layout_height="56dp"
                    android:layout_column="0"
                    android:text="@string/foodText"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/editIncomedigitText"
                    android:layout_width="113dp"
                    android:layout_height="56dp"
                    android:layout_column="1"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/editIncomeButton"
                    android:layout_width="66dp"
                    android:layout_height="35dp"
                    android:layout_column="2"
                    android:background="@android:drawable/ic_menu_edit" />

                <Button
                    android:id="@+id/deleteIncomeButton"
                    android:layout_width="62dp"
                    android:layout_height="35dp"
                    android:layout_column="3"
                    android:background="@android:drawable/ic_menu_delete" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</layout>