<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ShowBankFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/mybankLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mybankText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/incomeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incomeText"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/listIncomelabelText"
                    android:layout_width="204dp"
                    android:layout_height="match_parent"
                    android:text="food"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="195dp"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/outcomeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/outcomeText"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/listOutcomelabelText"
                    android:layout_width="211dp"
                    android:layout_height="match_parent"
                    android:text="buy food"
                    android:textAlignment="center"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="195dp"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</layout>