<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainBankFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/mybankLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mybankText"
                    android:textAlignment="center"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoText="true"
                    android:background="@android:drawable/ic_menu_delete"
                    android:textSize="6sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sumtextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Money Sumary"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sumdigitTextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sumIncomeTextabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sum Income"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/sumOutcomeTextLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sum Outcome"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sumIncomeDigitLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/sumOutcomeDigitLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textSize="24sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/incomeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/incomeText"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/outcomeButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/outcomeText"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</layout>